--- a/config.default.json
+++ b/config.default.json
@@ -123,7 +123,7 @@
         "config_reloading": true,
         "plugin_reloading": false
     },
-    "repo_link": "https://github.com/TotallyNotRobots/CloudBot/",
+    "repo_link": "https://github.com/effprime/BeakerBot/",
     "logging": {
         "console_debug": false,
         "file_debug": false,
