--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ tweepy = ">=3.8.0"
 venusian = ">=3.0.0"
 watchdog = ">=0.9.0"
 yarl = ">=1.4.2"
+pika = ">=1.1.0"
 
 [requires]
 python_version = "3.6"
