--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ venusian = ">=3.0.0"
 watchdog = ">=0.9.0"
 yarl = ">=1.4.2"
 pika = ">=1.1.0"
+munch = "==2.5.0"
 
 [requires]
 python_version = "3.6"
