--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,4 @@ services:
     container_name: ${CONTAINER_NAME:-beakerbot}
     restart: always
     volumes:
-      - ${DB_DIR:-./db}:/db
+      - /db_volume:/db
